--- a/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/Views/DownloadsPage.xaml
+++ b/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/Views/DownloadsPage.xaml
@@ -6,9 +6,11 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:MyTikTokBackup.Core.Models"
+    xmlns:viewmodels="using:MyTikTokBackup.Desktop.ViewModels"
     mc:Ignorable="d"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
     <Page.Resources>
+        
         <DataTemplate x:Key="VideoDataTemplate" x:DataType="models:DownloadVideo">
             <Grid>
                 <Grid.RowDefinitions>
@@ -27,29 +29,81 @@
                     Text="{x:Bind Status, Mode=OneWay}"/>
             </Grid>
         </DataTemplate>
+        <DataTemplate x:Key="UserQueueStateDataTemplate" x:DataType="viewmodels:UserQueueState">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="140"/>
+                    <ColumnDefinition Width="80"/>
+                    <ColumnDefinition/>
+                    <ColumnDefinition Width="100"/>
+                </Grid.ColumnDefinitions>
+                <TextBlock
+                    Grid.Column="0"
+                    VerticalAlignment="Center"
+                    Text="{x:Bind VideoSource.UserUniqueId}"/>
+                <TextBlock
+                    Grid.Column="1"
+                    VerticalAlignment="Center"
+                    Text="{x:Bind VideoSource.Type}"/>
+                <RichTextBlock
+                    VerticalAlignment="Center"
+                    Grid.Column="2">
+                    <Paragraph>
+                        <Run Text="{x:Bind Downloaded, Mode=OneWay}"/>
+                        /
+                        <Run Text="{x:Bind Total, Mode=OneWay}"/>
+                        (Errors:
+                        <Run Text="{x:Bind Error, Mode=OneWay}"/>
+                        )
+                    </Paragraph>
+                </RichTextBlock>
+                <Button
+                    Grid.Column="3"
+                    Background="Transparent"
+                    BorderBrush="LightGray"
+                    Foreground="LightGray"
+                    ToolTipService.ToolTip="Open folder"
+                    Click="OpenFolder_Click">
+                    <SymbolIcon Symbol="Folder"/>
+                </Button>
+            </Grid>
+        </DataTemplate>
     </Page.Resources>
-    <Grid>
+    <Grid Padding="8,2,8,2">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition />
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0" Orientation="Horizontal">
-            <RichTextBlock>
+            <RichTextBlock FontSize="17">
                 <Paragraph>
                     <Run Text="{x:Bind ViewModel.Downloaded, Mode=OneWay}"/>
                     /
                     <Run Text="{x:Bind ViewModel.Total, Mode=OneWay}"/>
+                    (Errors: <Run Text="{x:Bind ViewModel.Error, Mode=OneWay}"/>)
                 </Paragraph>
             </RichTextBlock>
             <Button
-                Content="Clear"
-                Command="{x:Bind ViewModel.ClearCommand}"/>
+                Content="Cancel"
+                Margin="12,0,0,0"
+                Command="{x:Bind ViewModel.CancelCommand}"/>
         </StackPanel>
         <ListView 
             Grid.Row="1"
-            ItemsSource="{x:Bind ViewModel.Videos}"
+            Margin="0,12,0,0"
+            Header="Downloading now"
+            ItemsSource="{x:Bind ViewModel.DownloadingVideos}"
+            SelectionMode="None"
+            IsItemClickEnabled="False"/>
+        <ListView 
+            Grid.Row="2"
+            Margin="0,12,0,0"
+            Header="Queue summary"
+            ItemsSource="{x:Bind ViewModel.QueueByUser}"
             SelectionMode="None"
             IsItemClickEnabled="False"
-            ItemTemplate="{StaticResource VideoDataTemplate}"/>
+           ItemTemplate="{StaticResource UserQueueStateDataTemplate}"/>
+
     </Grid>
 </Page>
