--- a/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/Views/ProfileVideosPage.xaml
+++ b/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/Views/ProfileVideosPage.xaml
@@ -20,28 +20,49 @@
             </Grid.RowDefinitions>
             <StackPanel Grid.Row="0">
                 <TextBlock Text="{x:Bind VM.UserUniqueId, Mode=OneWay}" />
+                <StackPanel HorizontalAlignment="Center" Orientation="Horizontal">
+                    <Button Content="Posted" Click="Button_Click" />
+                    <Button Content="Liked" Click="Button_Click_1"/>
+                </StackPanel>
             </StackPanel>
-            
-            <ListView
-                Grid.Row="1"
-                SelectionMode="Single"
-                IsItemClickEnabled="True"
-                SelectionChanged="Videos_SelectionChanged"
-                ItemsSource="{x:Bind VM.LikedVideos}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <StackPanel>
-                            <TextBlock Text="{Binding Video.Description}" />
-                        </StackPanel>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
+            <Grid Grid.Row="1">
+                <ListView
+                    x:Name="postedLV"
+                    IsItemClickEnabled="True"
+                    ItemsSource="{x:Bind VM.PostedVideos}"
+                    SelectionChanged="PostedVideos_SelectionChanged"
+                    SelectionMode="Single"
+                    Visibility="Visible">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel>
+                                <TextBlock Text="{Binding Video.Description}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <ListView
+                    x:Name="likedLV"
+                    IsItemClickEnabled="True"
+                    ItemsSource="{x:Bind VM.LikedVideos}"
+                    SelectionChanged="LikedVideos_SelectionChanged"
+                    SelectionMode="Single"
+                    Visibility="Collapsed">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel>
+                                <TextBlock Text="{Binding Video.Description}" />
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </Grid>
         </Grid>
         <Grid Grid.Column="1">
             <WebView2
                 x:Name="webView"
                 HorizontalAlignment="Stretch"
-                VerticalAlignment="Stretch"/>
+                VerticalAlignment="Stretch" />
         </Grid>
     </Grid>
 </Page>
