--- a/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/MainWindow.xaml
+++ b/MyTikTokBackup.Desktop/MyTikTokBackup.Desktop/MainWindow.xaml
@@ -2,23 +2,32 @@
     x:Class="MyTikTokBackup.Desktop.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:MyTikTokBackup.Desktop"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:MyTikTokBackup.Desktop"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <NavigationView 
+    <NavigationView
         x:Name="NavView"
-        PaneDisplayMode="Top"
         AlwaysShowHeader="False"
+        BackRequested="NavView_BackRequested"
         Loaded="NavView_Loaded"
-        SelectionChanged="NavView_SelectionChanged"
-        BackRequested="NavView_BackRequested">
+        PaneDisplayMode="Top"
+        SelectionChanged="NavView_SelectionChanged">
         <NavigationView.MenuItems>
             <!--<NavigationViewItem Tag="MainPage" Icon="Home" Content="Home"/>-->
-            <NavigationViewItem Tag="TikTokBrowserPage" Icon="Globe" Content="Browser"/>
-            <!--<NavigationViewItem Tag="LibraryPage" Icon="Library" Content="Library"/>-->
-            <NavigationViewItem Tag="DownloadsPage" Icon="Download" Content="Downloads"/>
+            <NavigationViewItem
+                Content="Browser"
+                Icon="Globe"
+                Tag="TikTokBrowserPage" />
+            <NavigationViewItem
+                Content="Folders"
+                Icon="Library"
+                Tag="FoldersPage" />
+            <NavigationViewItem
+                Content="Downloads"
+                Icon="Download"
+                Tag="DownloadsPage" />
             <!--<NavigationViewItemSeparator/>-->
             <!--<NavigationViewItem Tag="YouTubeSearchPage" Content="Search">
                 <NavigationViewItem.Icon>
@@ -28,12 +37,19 @@
         </NavigationView.MenuItems>
 
         <!--<NavigationView.AutoSuggestBox>
-            --><!-- See AutoSuggestBox documentation for
-                 more info about how to implement search. --><!--
+        -->
+        <!--
+            See AutoSuggestBox documentation for
+            more info about how to implement search.
+        -->
+        <!--
             <AutoSuggestBox x:Name="NavViewSearchBox" QueryIcon="Find"/>
         </NavigationView.AutoSuggestBox>-->
 
-        <Frame x:Name="contentFrame" Margin="2" IsTabStop="True"
-                NavigationFailed="ContentFrame_NavigationFailed"/>
+        <Frame
+            x:Name="contentFrame"
+            Margin="2"
+            IsTabStop="True"
+            NavigationFailed="ContentFrame_NavigationFailed" />
     </NavigationView>
 </Window>
